Update routers and services to support pagination
